--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "css.validate": false,
+  "css.lint.unknownAtRules": "ignore",
   "tailwindCSS.enable": true,
   "tailwindCSS.emmetCompletions": true,
   "editor.quickSuggestions": {
